# flame

./: Cargo.toml  LICENSE.md  README.md
examples/: 1.json  1.yaml  2.yaml
flame_macro/: Cargo.toml
flame_macro/src/: lib.rs
src/: bounds.rs  bucket.rs  buffer.rs  color.rs  core.rs  error.rs  file.rs  flame.rs  function.rs  lib.rs  main.rs  random.rs  render.rs  variation.rs
src/core/: buffer.rs  color.rs  mod.rs  variation.rs
src/lib/: cli.rs  mod.rs  test.rs
