[package]
name = "flame"
# version = "0.6.1"
authors = ["Dathan Ault-McCoy"]
about = "An experimental fractal flame generator"
edition = "2024"

[profile.release]
# debug = 1

[dependencies]
image = "0.25"
rand = "0.9"
nalgebra = "0.32"
clap = { version = "4.1", features = ["derive"] }
clap-num = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2.15"
ron = "0.12.0"
thiserror = "2.0.17"
ribir = "0.3"
async-channel = "2.5"
